// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkFormValidation should render correctly 1`] = `
<div
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": "auto",
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div>
    <div
      className="bpk-form-validation__container"
    >
      <div
        className="bpk-form-validation bpk-form-validation--appear"
        id="my-form-validation"
      >
        <span
          style={
            Object {
              "display": "inline-block",
              "lineHeight": "1.125rem",
              "marginTop": "0.0625rem",
              "verticalAlign": "top",
            }
          }
        >
          <svg
            className="bpk-form-validation__icon"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M22.5 12c0 5.799-4.701 10.5-10.5 10.5S1.5 17.799 1.5 12 6.201 1.5 12 1.5 22.5 6.201 22.5 12zm-12-4.5a1.5 1.5 0 0 1 3 0V12a1.5 1.5 0 0 1-3 0V7.5zM12 18a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"
              fillRule="evenodd"
            />
          </svg>
        </span>
        A validation message.
      </div>
    </div>
  </div>
</div>
`;

exports[`BpkFormValidation should render correctly with "expanded" equal to false 1`] = `
<div
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": 0,
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div>
    <div
      className="bpk-form-validation__container"
    >
      <div
        className="bpk-form-validation"
        id="my-form-validation"
      >
        <span
          style={
            Object {
              "display": "inline-block",
              "lineHeight": "1.125rem",
              "marginTop": "0.0625rem",
              "verticalAlign": "top",
            }
          }
        >
          <svg
            className="bpk-form-validation__icon"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M22.5 12c0 5.799-4.701 10.5-10.5 10.5S1.5 17.799 1.5 12 6.201 1.5 12 1.5 22.5 6.201 22.5 12zm-12-4.5a1.5 1.5 0 0 1 3 0V12a1.5 1.5 0 0 1-3 0V7.5zM12 18a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"
              fillRule="evenodd"
            />
          </svg>
        </span>
        A validation message.
      </div>
    </div>
  </div>
</div>
`;
